[gd_scene load_steps=4 format=3 uid="uid://ck1pjsvycvou1"]

[ext_resource type="PackedScene" uid="uid://ccc3cg3iby6sp" path="res://Scenes/Control/InfoBox/info_button.tscn" id="1_8qsvw"]
[ext_resource type="Script" path="res://Scripts/Editor/airline_property_editor_ui.gd" id="1_evrr4"]
[ext_resource type="AudioStream" uid="uid://nui4utagj265" path="res://Audio/SFX/Game/airway_complete.wav" id="2_5xl2p"]

[node name="AirlinePropertyEditorUI" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_evrr4")
complete_audio_stream = ExtResource("2_5xl2p")

[node name="CompleteButton" parent="." instance=ExtResource("1_8qsvw")]
layout_mode = 2

[node name="SFX" type="Node" parent="."]

[node name="CompleteAirlineAudioPlayer" type="AudioStreamPlayer" parent="SFX"]
